--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@ need to load. You'll see a lot of <link>s to CSS files for styles and
   <!-- Load the page styles. -->
   <link href="css/style.css" rel="stylesheet">
 
-
+  <script type="text/javascript" src="js/resumeBuilder.js"></script>
+  <script type="text/javascript" src="js/jQuery.js.js"></script>
+  <script type="text/javascript" src="js/helper.js.js"></script>
 
   <!--
   Uncomment the <script> tag below when you're ready to add an interactive Google Map to your resume!
